Change ncp-ciphers to data-ciphers
In openvpn 2.5, ncp-ciphers option has changed to data-ciphers

--- a/templates/client.conf.j2
+++ b/templates/client.conf.j2
@@ -15,8 +15,8 @@ dev {{ openvpn_client_dev }}
 # server.
 proto {{ openvpn_proto }}
 
-{% if openvpn_ncp_ciphers | length %}
-ncp-ciphers {{ openvpn_ncp_ciphers }}
+{% if openvpn_data_ciphers | length %}
+data-ciphers {{ openvpn_data_ciphers }}
 {% endif %}
 
 # The hostname/IP and port of the server. You can have multiple remote entries
