--- a/templates/server.conf.j2
+++ b/templates/server.conf.j2
@@ -19,8 +19,8 @@ proto {{ openvpn_proto }}
 port-share 127.0.0.1 {{ openvpn_portshare }}
 {% endif %}
 
-{% if openvpn_ncp_ciphers | length %}
-ncp-ciphers {{ openvpn_ncp_ciphers }}
+{% if openvpn_data_ciphers | length %}
+data-ciphers {{ openvpn_data_ciphers }}
 {% endif %}
 
 # "dev tun" will create a routed IP tunnel, "dev tap" will create an ethernet
